Games to look into: DiRT, The PATH
=Upcoming=
* Legacy of Kain: Blood Omen 2
* System Shock 2 - Added GoG info
Contributed by Arc Angel
* DmC: Devil May Cry - Steam info
Contributed by simtech76
* Castle Crashers - Steam only
* Crysis 3
* Dead Space 3
* Sins of a Solar Empire: Rebellion
Contributed by Anonymouse Hero
* Ellen Whittaker's Horse Life
* My Riding Stables 2
* WolfQuest
Contributed by GameSaveManager
* 1NSANE
* 30 Minute Hero: Super Mega Neo Climax Ultimate Boy
* Ace Combat: Assault Horizon
* Aliens: Colonial Marines
* ArmA: Cold War Assault
* A Walk In The Dark
* Bleed
* Carrier Command: Gaia Mission
* Cherry Tree High Comedy Club
* Chessmaster 9000
* Chivalry: Medieval Warfare
* Creatures 3
* Crusaders: Thy Kingdom Come
* Dark Places - Quake Mod
* Dead Pixels
* Defender's Quest: Valley of the Forgotten
* Devil May Cry 3 - Added steam info
* DmC Devil May Cry - Windows info
* Dune 2 Legacy
* Fieldrunners
* Fieldrunners 2
* Galactic Arms Race
* GEAR
* Gods vs Humans
* Korsakovia
* La-Mulana
* Might & Magic: Clash of Heroes
* Nightmare House 2
* ProGammaX
* Proteus
* Puzzler World 2
* Retrovirus
* Scoregasm
* Scribblenauts Unlimited
* Soul Reaver 2
* Splice
* Stealth Bastard Deluxe
* Super Hexagon
* The Cave
* Tomb Raider - Steam info
* Virtual City
* Warlock: Master of the Arcane
* Worms Blast


=2012/2/3=
* Age of Wonders II: Added GoG info
* Age of Wonders: Shadow Magic - Added more GoG info
* Depserados - Added GoG info
* Dungeon Keeper II - Added more GoG info
* Far Cry 3 - Contributed by thereid84
* Hotline Miami - Added GoG info
* In Cold Blood
* Jack Orlando: Director's Cut
* Lords of the Realm III
* Populous 2
* Populous: The Beginning
* Runaway 2 - Added GoG info
* Strike Suite Zero
* Stronghold - Deprecated old save locations, moved to dcuments folder
* SpecOps: The Update - Contributed by Arc Angel

Contributed by AdmiringWorm
* The Book of Unwritten Tales - Added Settings path
* Euro Truck Simulator 2
* Omerta: City of Gangsters
