@@ -13,6 +13,8 @@ Contributed by Anonymouse Hero
 * Ellen Whittaker's Horse Life
 * My Riding Stables 2
 * WolfQuest
+Contributed by rlabrecque
+* Tony Hawk's Pro Skater 3
 Contributed by GameSaveManager
 * 1NSANE
 * 30 Minute Hero: Super Mega Neo Climax Ultimate Boy
